<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">DROID DESSERT HIMANSHU SINHA</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Name">DROID CAFE</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You Order a Donut</string>
    <string name="ice_cream_order_message">You Order a IceCream</string>
    <string name="froyo_order_message">You Order a Froyo</string>
    <string name="order_label_text">Order:</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="Namelabel">Name</string>
    <string name="NameHint">Enter Your Name</string>
    <string name="AddLabel">Address</string>
    <string name="AddHint">Enter Your Address</string>
    <string name="PhoneNum">Phone</string>
    <string name="PhoneHint">Enter Your Phone Num</string>
    <string name="NoteLabel">Note</string>
    <string name="NoteHint">Write Note If you Want To</string>
    <string name="DeliveryMEthod">Choose A Delivery Method</string>
    <string name="Sameday">Same day messenger service</string>
    <string name="Netday">Next day ground delivery</string>
    <string name="Pickup">Pick Up</string>
    <string name="alter_title">Droid Cafe Alert Box</string>
    <string name="alter_message">Are You Sure You Want To Continue With This Order</string>
    <string name="ok_button">OK</string>
    <string name="cancle_button">CANCEL</string>
</resources>