<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:icon="@drawable/ic_shoppong_cart"
        android:title="@string/action_order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_status_info"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favourites"
        android:orderInCategory="30"
        android:icon="@drawable/ic_favourate"
        android:title="@string/action_favourites"
        app:showAsAction="ifRoom" />
</menu>